--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Don't forget to change the title and connect the CSS file -->
-  <title>Project Library</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Album Library</title>
 </head>
+
 <body>
-  <h1>Project Library</h1>
-  <!-- Don't forget to connect the JavaScript file -->
+  <header>
+    <h1>Album Library</h1>
+  </header>
+  <div id="album-container"></div>
+  <script src="script.js"></script>
 </body>
+
 </html>
