Add header image

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
-  <header>
-    <h1>Album Library</h1>
+  <header class="header">
+    <div class="h1 container">
+      <h1>Album Library</h1>
+    </div>
   </header>
   <div id="album-container"></div>
   <script src="script.js"></script>
