Add shimmer effect to header

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>Album Library</title>
 </head>
 
 <body>
   <header class="header">
-    <div class="h1 container">
+    <div class="overlay">
       <h1>Album Library</h1>
     </div>
   </header>
