Add random button and random album function, add filter artist function to the filter artist button

--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
       <label for="artistSelect">Artist:</label>
       <select id="artistSelect">
         <option value="all">Show all</option>
-        <option value="artist">Beyoncé</option>
-        <option value="artist">Danny Elfman</option>
-        <option value="artist">Eminem</option>
-        <option value="artist">John Williams</option>
-        <option value="artist">Led Zeppelin</option>
-        <option value="artist">Linkin Park</option>
-        <option value="artist">Pearl Jam</option>
-        <option value="artist">Queen</option>
-        <option value="artist">Stevie Wonder</option>
-        <option value="artist">Taylor Swift</option>
+        <option value="Beyoncé">Beyoncé</option>
+        <option value="Danny Elfman">Danny Elfman</option>
+        <option value="Eminem">Eminem</option>
+        <option value="John Williams">John Williams</option>
+        <option value="Led Zeppelin">Led Zeppelin</option>
+        <option value="Linkin Park">Linkin Park</option>
+        <option value="Pearl Jam">Pearl Jam</option>
+        <option value="Queen">Queen</option>
+        <option value="Stevie Wonder">Stevie Wonder</option>
+        <option value="Taylor Swift">Taylor Swift</option>
       </select>
     </div>
 
@@ -68,6 +68,10 @@
         <option value="length">By Length</option>
       </select>
     </div>
+  </div>
+  <div>
+  <!-- Random button -->
+  <button id="randomButton">Select Random Album</button>
   </div>
 
   <!-- Album Container -->
