Add sort option function. Set default sort to alphabetical by Title

--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
       <h3>Sort</h3>
       <!-- Select menu for sorting -->
       <select id="sortSelect">
-        <option value="title">Alphabetically by Title A-Z</option>
-        <option value="title">Alphabetically by Title Z-A</option>
-        <option value="artist">Alphabetically by Artist A-Z</option>
-        <option value="artist">Alphabetically by Artist Z-A</option>
-        <option value="year">By Release year Newest to Oldest</option>
-        <option value="year">By Release year Oldest to Newest</option>
-        <option value="length">By Length</option>
+        <option value="alpha-title">Alphabetically by Title A-Z</option>
+        <option value="reverse-title">Alphabetically by Title Z-A</option>
+        <option value="alpha-artist">Alphabetically by Artist A-Z</option>
+        <option value="reverse-artist">Alphabetically by Artist Z-A</option>
+        <option value="newest-year">By Release year Newest to Oldest</option>
+        <option value="oldest-year">By Release year Oldest to Newest</option>
+        <option value="shortest-length">By Length shortest to longest</option>
+        <option value="longest-length">By Length longest to shortest</option>
       </select>
     </div>
   </div>
