Add Apply filter button to the HTML and Apply filter fun ction to the JavaScript file. Remove comments not in use

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <option value="Stevie Wonder">Stevie Wonder</option>
         <option value="Taylor Swift">Taylor Swift</option>
       </select>
+      <button id="applyFilters">Apply</button> 
     </div>
 
     <!-- Sort Button -->
