Edit styling on panel and buttons

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- Button Container -->
   <div class="button-container">
     <!-- Filter Button -->
-    <button id="filterButton">Filter</button>
+    <button id="filterButton" class="filter-button">Filter</button>
 
     <!-- Filter Panel -->
     <div id="filterPanel" class="panel">
@@ -50,7 +50,7 @@
         <option value="Stevie Wonder">Stevie Wonder</option>
         <option value="Taylor Swift">Taylor Swift</option>
       </select>
-      <button id="applyFilters">Apply</button> 
+      <button id="applyFilters">Apply</button>
     </div>
 
     <!-- Sort Button -->
@@ -72,8 +72,8 @@
     </div>
   </div>
   <div>
-  <!-- Random button -->
-  <button id="randomButton">Select Random Album</button>
+    <!-- Random button -->
+    <button id="randomButton">Select Random Album</button>
   </div>
 
   <!-- Album Container -->
