Add CSS styling to buttons and panels, add panel Close button, create slide in and out effect on toggle

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <!-- Filter Panel -->
     <div id="filterPanel" class="panel">
+      <span id="closeFilterPanel" class="closePanel" style="cursor: pointer;">&times;</span>
       <h3>Filter by</h3>
       <!--  Select menu for genre  -->
       <label for="genreSelect">Genre:</label>
@@ -57,6 +58,7 @@
     <button id="sortButton">Sort</button>
     <!-- Sort Panel -->
     <div id="sortPanel" class="panel">
+      <span id="closeSortPanel" class="closePanel" style="cursor: pointer;">&times;</span>
       <h3>Sort</h3>
       <!-- Select menu for sorting -->
       <select id="sortSelect">
