Add footer with links to GitHub accounts

--- a/index.html
+++ b/index.html
@@ -82,6 +82,28 @@
   <!-- Album Container -->
   <div id="album-container" class="album-container"></div>
   <script src="script.js"></script>
+  <!-- personal info -->
+   
+  <footer>
+    <div class="personal-info-items">
+      <h4>
+        <a href="https://www.linkedin.com/in/joyce-kuo" target="_blank">
+          <img src="album-images/png-transparent-github-git-hub-logo-icon-thumbnail-removebg-preview.png" alt="LinkedIn Logo" width="20"> Joyce Kuo
+        </a>
+      </h4>
+      <h4>
+        <a href="https://github.com/IamLise" target="_blank">
+          <img src="album-images/png-transparent-github-git-hub-logo-icon-thumbnail-removebg-preview.png" alt="GitHub Logo" width="20"> IamLise
+        </a>
+      </h4>
+      <h4>
+        <a href="https://github.com/Joheri1" target="_blank">
+          <img src="album-images/png-transparent-github-git-hub-logo-icon-thumbnail-removebg-preview.png" alt="GitHub Logo" width="20"> Joheri1
+        </a>
+      </h4>
+      <h4>© 2024 Copyright - Developed by Joyce Kuo, Liselotte Engström, and Johanna Eriksson</h4>
+    </div>
+  </footer>
 </body>
 
 </html>
