Center the content in the footer

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
           <img src="album-images/png-transparent-github-git-hub-logo-icon-thumbnail-removebg-preview.png" alt="GitHub Logo" width="20"> Joheri1
         </a>
       </h4>
-      <h4>© 2024 Copyright - Developed by Joyce Kuo, Liselotte Engström, and Johanna Eriksson</h4>
     </div>
+    <div><h4>© 2024 Copyright - Developed by Joyce Kuo, Liselotte Engström, and Johanna Eriksson</h4></div>
   </footer>
 </body>
 
