Change link to a GitHub account

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <footer>
     <div class="personal-info-items">
       <h4>
-        <a href="https://www.linkedin.com/in/joyce-kuo" target="_blank">
+        <a href="https://github.com/JoyceKuode" target="_blank">
           <img src="album-images/png-transparent-github-git-hub-logo-icon-thumbnail-removebg-preview.png" alt="LinkedIn Logo" width="20"> Joyce Kuo
         </a>
       </h4>
