--- a/index.html
+++ b/index.html
@@ -83,26 +83,31 @@
   <div id="album-container" class="album-container"></div>
   <script src="script.js"></script>
   <!-- personal info -->
-   
+
   <footer>
     <div class="personal-info-items">
-      <h4>
+      <h4 class="github-account">
         <a href="https://github.com/JoyceKuode" target="_blank">
-          <img src="album-images/png-transparent-github-git-hub-logo-icon-thumbnail-removebg-preview.png" alt="LinkedIn Logo" width="20"> Joyce Kuo
+          <img src="album-images/png-transparent-github-git-hub-logo-icon-thumbnail-removebg-preview.png" alt="GitHub"
+            width="20"> JoyceKuode
         </a>
       </h4>
       <h4>
         <a href="https://github.com/IamLise" target="_blank">
-          <img src="album-images/png-transparent-github-git-hub-logo-icon-thumbnail-removebg-preview.png" alt="GitHub Logo" width="20"> IamLise
+          <img src="album-images/png-transparent-github-git-hub-logo-icon-thumbnail-removebg-preview.png"
+            alt="GitHub Logo" width="20"> IamLise
         </a>
       </h4>
       <h4>
         <a href="https://github.com/Joheri1" target="_blank">
-          <img src="album-images/png-transparent-github-git-hub-logo-icon-thumbnail-removebg-preview.png" alt="GitHub Logo" width="20"> Joheri1
+          <img src="album-images/png-transparent-github-git-hub-logo-icon-thumbnail-removebg-preview.png"
+            alt="GitHub Logo" width="20"> Joheri1
         </a>
       </h4>
     </div>
-    <div><h4>© 2024 Copyright - Developed by Joyce Kuo, Liselotte Engström, and Johanna Eriksson</h4></div>
+    <div>
+      <h4>© 2024 Copyright - Developed by Joyce Kuo, Liselotte Engström, and Johanna Eriksson</h4>
+    </div>
   </footer>
 </body>
 
