Add feature to toggle cards and display more info on mobile screens

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <div id="fullscreen-overlay" class="fullscreen-overlay"></div>
   <header class="header">
     <div class="overlay">
       <h1>Album Library</h1>
