Add README file. Add min-width and min-height of 44px to buttons and clickable areas to meet the recommended touch target size.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
        - Changed <span> to <button>.
        - <section> instead of <div> for the filter panel.
        - Renamed Apply button to a more descriptive text, Apply filters. 
-       - Updated the heading elements to follow correct order (h1, h2, h3...).
+       - Fix Lighthouse warning: Updated the heading elements to follow correct order (h1, h2, h3...).
        -->
      <section  id="filterPanel" class="panel">
       <button id="closeFilterPanel" class="closePanel" aria-label="Close Filter Panel">&times;</button>
@@ -80,7 +80,7 @@
        - Changed <span> to <button>.
        - <section> instead of <div> for the sort panel.
        - Renamed Apply button to a more descriptive text, Apply sorting.
-       - Updated the heading elements to follow correct order (h1, h2, h3...). 
+       - Fix Lighthouse warning: Updated the heading elements to follow correct order (h1, h2, h3...). 
        - Fix Lighthouse warning: Added a <label> element for the sort <select> element to improve accessibility for screen reader users.
         -->
     <section id="sortPanel" class="panel">
@@ -117,8 +117,8 @@
   <footer>
     <div class="personal-info-items">
       <!-- Changes for Accessibility: 
-       - Updated the heading elements to follow correct order (h1, h2, h3...)
-       - aria-labels that describe the links 
+       - Fix Lighthouse warning: Updated the heading elements to follow correct order (h1, h2, h3...)
+       - aria-labels that describe the links to the GitHub accounts
        --->
       <h3 class="github-account">
         <a href="https://github.com/JoyceKuode" aria-label="Link to Joyce's GitHub account" target="_blank">
